--- a/gb/ncid282_3.md
+++ b/gb/ncid282_3.md
@@ -15,7 +15,9 @@
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/13/n11719653.md#1" target="_blank">广州一中学爆发甲型流感 114学生染病</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/13/n11719653.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2009/12/912110904231849-150x120.jpg" align ="left"></a>广州市荔湾区教育局12月12日通报，广州市第一中学高中部12月9日日出现甲型流感疫情，截至12日早9时，该校高二年级累计病例达100宗，全校一共出现114宗，其中12宗确诊。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 10:00 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/12/n11718922.md#1" target="_blank">【快讯】英国大选 出口民调显保守党大胜</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/12/n11718922.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1N01N6-150x120.jpg" align ="left"></a>被称为英国“最关键大选之一”的选举终于落下帷幕，根据出口民调（exit poll），保守党赢得了多数席位，这为首相约翰逊的执政铺平了道路。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 6:23 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/12/n11718944.md#1" target="_blank">四万吨中央储备肉竞价投放 国企大发国难财</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/12/n11718944.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/1909091340312436-150x120.jpg" align ="left"></a>中共官方宣布，星期四（12日）以竞价的方式，向市场投放4万吨中央储备猪肉，但据自由亚洲电台报导，垄断了进口权的国企却借此兴风作浪，大发国难财。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 1:57 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/12/n11717662.md#1" target="_blank">黄历新年间火车票售卖首日 部分车次票被抢光</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/12/n11717662.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2005/01/5012702021164-150x120.jpg" align ="left"></a>今日（12月12日）是大陆2020年春运火车票开始售卖的第一天，据悉，已有多个车次的车票售光。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 3:46 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/17/n11728228.md#1" target="_blank">助中共官员非法来台 白狼之子旅行社遭搜索</a><br></h3>新北市水资源经济发展协会负责人洪庆淋涉嫌勾结国内20多间非甲种旅行社，伪造文件以专业交流名义申请入台许可，让至少逾5千名中国公务员非法来台；检方17日针对包含统促党总裁“白狼”张安乐之子张玮经营的“华夏大地旅行社”在内的6家旅行社进行第二波搜索。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 11:35 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/17/n11727802.md#1" target="_blank">四川少年在家中自杀 父亲看到其生前漫画崩溃</a><br></h3>12月9日，四川绵阳市三台县芦溪镇广华寺村12岁少年刘少军在家中上吊身亡。在整理儿子遗物时，父亲刘明照被儿子生前所画的一副描绘学生不堪老师暴力而自尽的漫画所震惊。联想到儿子入殓时身上有伤痕，刘明照觉得儿子遭受了校园暴力。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 4:47 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/17/n11727172.md#1" target="_blank">每日三退声明精选（2019/12/16）</a><br></h3>看透中共邪教了。法轮功学员根本就没做错什么啊，就这么对待别人。看到整个共产邪教根本就是想着如何灭掉别人的自由，很邪恶，决定在这里公开退出共匪党团队。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 11:39 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/17/n11727111.md#1" target="_blank">贵州发生煤矿事故 致14人死亡2人被困</a><br></h3>据陆媒报导，12月17日1时30分许，贵州安龙县广隆煤矿发生一起煤与瓦斯突出事故。经初步核实，当班井下作业人员23人，7人安全升井。截至9时，事故造成14人死亡，2人被困。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 11:25 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/16/n11724685.md#1" target="_blank">北京发大雾黄色预警 局地能见度低于500米</a><br></h3>据北京市气象局官网消息，今早（16日）8时，北京市发布大雾黄色预警，且多个地区下雪，其中延庆最大降雪已经达到了7.3毫米。受天气影响，首都机场已取消140架次航班。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 9:43 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/15/n11724326.md#1" target="_blank">《延禧》女星拔火罐出意外 后背手臂被烧烂</a><br></h3>曾在《延禧攻略》剧集中饰演“魏璎珞”之姊“魏璎宁”的大陆女星邓莎，12月14日在微博发文透露，日前工作结束后到SPA（拉丁文“Solus Por Aqua”的简写，美容店）店做拔火罐，没想到发生意外。在她晒出的照片中，她的后背和手臂被严重烧伤，伤口触目惊心，消息一度登上热搜榜首。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 9:10 AM							</td></tr>
@@ -27,7 +29,5 @@
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/13/n11719825.md#1" target="_blank">每日三退声明精选（2019/12/12）</a><br></h3>自从今年年初我出国时偶然观看了由神韵艺术团表演的多姿多彩的中华传统舞蹈节目后，我的心态有了大幅度的转变，如果这样的中华文化传承是共产党口中的邪教，那么共产党自己又能是什么呢？后来我回国后又翻墙阅读了《九评共产党》的文章，字字句句都深刻揭示了共产党本质，给了我极大的震撼，让我深刻的意识到共产党对我们真正中国传统文化的残害是多么的严重，我现在身在邪党阵营中，只能.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 10:32 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/12/n11718850.md#1" target="_blank">中国高校性丑闻不断 宁波大学副教授也出事</a><br></h3>继北京大学、上海财经大学教授曝出性丑闻后，宁波大学女生在网上举报遭该校副教授性骚扰。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 2:01 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/12/n11717889.md#1" target="_blank">长期熬夜写作业 河南小学生险失明</a><br></h3>近日，河南焦作一名六年级女孩因眼球疼痛、眼睛没有光感而前往医院就医。医生诊断为急性视神经网膜炎。据女孩的家长介绍，女孩因做作业慢，长期熬夜，一天只睡6个小时。经过治疗，女孩的视力恢复到1.0。医生建议，学校布置作业的量要适当。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 5:06 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/12/n11717330.md#1" target="_blank">日本正品告输中国山寨版 无印良品上诉失败</a><br></h3>中国再现山寨版吿赢原创品牌案。北京高院近日做出最终判决，判日本无印良品败诉，并责令其不但要删除纺织类商品上的“无印良品”商标，还须赔偿原告（北京无印良品）62.5万元人民币。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 3:08 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/12/n11717468.md#1" target="_blank">河南安置房一敲就碎 民众：谁敢收房住进去？</a><br></h3>近日，河南郑州金水区小贺庄村安置房，被村民发现是豆腐渣工程——磁砖一碰就掉、梁柱混凝土破碎掉落等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 2:03 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid282_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid282.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid282_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid282_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid282_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid282_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid282_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid282_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid282_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid282_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid282_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/osnkrv285/djy/blob/master/gb/ncid282_3.md#1<br><a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid282_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/osnkrv285/djy/blob/master/gb/ncid282_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid282_3.htm">http://www.epochtimes.com/gb/ncid282_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
