--- a/gb/news392_4.md
+++ b/gb/news392_4.md
@@ -1,4 +1,10 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/osnkrv285/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>最新评论</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/osnkrv285/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/osnkrv285/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/18/n11730890.md#1" target="_blank">海风：澳门取代香港 又是一场政治闹剧</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/18/n11730890.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/130911100058100311-600x400-150x120.jpg" align ="left"></a>顺我者昌，逆我者亡。这是中共独裁者的天性。香港不听话，中共就要把它国际金融中心的地位废除。
+
+中共废除香港国际金融中心的想法其实很早就有了，先是希望用上海、广州来替代香港，后来又希望用深圳来取代香港，结果都行不通。如今又想用澳门来取代香港，难道澳门就能行得通吗？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 1:15 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/18/n11730395.md#1" target="_blank">陈思敏：A股营造“收官红”散户股民居高思危</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/18/n11730395.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/20190426-biyun-hk002-150x120.jpg" align ="left"></a>12月17日A股沪指收复3,000点，观察这次站上3,000点的盘面动力，跟今年年初或者以往其实没有什么不同，主要还是大金融股推升。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 10:51 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/18/n11730097.md#1" target="_blank">王友群：中共越打压台湾 挺台湾的人越多</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/18/n11730097.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/07/3d47b0bc52fe192529f5ae486f548241-150x120.jpg" align ="left"></a>2019年即将结束。这一年，处于内外交困、四面楚歌、全面危机中的中共，与普世价值背道而驰，在全面剥夺中国大陆人的“信仰自由、言论自由、免于恐惧的自由、免于匮乏的自由”的同时，不断加大打压台湾人的力度。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 7:00 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/18/n11730010.md#1" target="_blank">吕锡民：在5G未来演进中的AI</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/18/n11730010.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1131489187-150x120.jpg" align ="left"></a>随着5G新空中介面（New Radio, NR）规范第一版（Rel-15）的完成，下一步重点研究应该会转向无线行动通讯的发展。与前几代产品类似，NR预计在未来十年内逐步展开，从引入创新技术组件到进一步增强功能，并且扩大5G无线接取范围。从更长远角度来看，我们预期将会有全新的“超越5G”无线接取技术出现。重新塑造与定义未.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 6:34 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/18/n11729917.md#1" target="_blank">袁斌：“南京事件”与所谓“四一二反革命政变”</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/18/n11729917.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/06/110629062200100383-150x120.jpg" align ="left"></a>1927年4月12日，国民党军队在上海逐步解除了上海工人纠察队的武装，同时逮捕、处决了一些中共党员。在广州，国民党也展开了清洗。大批中共党员和激进份子被捕，三百多人被处死。这是国民党“清党”第一期中的标志性事件，史学界一般称之为“四一二事件”，而中共则称其为“四一二反革命政变”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 5:58 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/18/n11729270.md#1" target="_blank">【名家专栏】破除“间谍门”阴谋的三步曲</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/18/n11729270.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Epoch_Times9A6A9246-1200x800-150x120.jpg" align ="left"></a>在过了一年半之后，美国司法部监察长迈克尔?E?霍洛维茨（Michael e. Horowitz）在上周一（12月9日）对外发布了他的最终报告。此前，霍洛维茨一直在审查关于联邦调查局（FBI）在2016年美国总统大选期间监视川普（特朗普）总统当时的竞选活动的严肃问题。周三（12月11日），他来到国会并讨论了这份报告。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 3:52 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/18/n11729772.md#1" target="_blank">文武：宁要动荡中的觉醒 也不要稳定中的愚昧</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/18/n11729772.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1150179857-600x400-1-150x120.jpg" align ="left"></a>中共一直在高调的强调稳定，说什么稳定压倒一切，前几天中共召开高规格的经济工作会议，说了一大堆，其实就是围绕着一个字“稳”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 2:32 PM			</td></tr>
@@ -21,7 +27,7 @@
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/16/n11725671.md#1" target="_blank">海风：中共政权即将崩溃的十大预兆</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/16/n11725671.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1504210527312039-600x400-150x120.jpg" align ="left"></a>—个政权在崩溃前就像一个久病将亡的病人，它必将会出现死亡前的各种预兆。历史学家曾经总结了历代王朝在灭亡前将会普遍出现的十大征兆：......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 10:31 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/16/n11726127.md#1" target="_blank">李靖宇：从台湾网红波特王遭中共打压谈起</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/16/n11726127.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/maxresdefault-600x400-1-150x120.jpg" align ="left"></a>Youtuber网红波特王与台湾总统蔡英文合作拍片，影片创下高流量；不料中国合作方“徐州自由自在网路科技公司”要求影片不能出现“总统”字眼，......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 9:42 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/16/n11726045.md#1" target="_blank">程晓农：十二个字读懂美中经贸谈判</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/16/n11726045.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/15c9f8864d19e1f7_ttl7day1IM_05-150x120.jpg" align ="left"></a>我用十二个字来解读美中经贸谈判：对川普来说，不打是打，不罚是罚；对中共来说，赢就是输。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 9:10 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/16/n11725616.md#1" target="_blank">程晓容：澳洲政民觉醒 合力抵制中共渗透</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/16/n11725616.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/0Y1A5520-1-150x120.jpg" align ="left"></a>维州州长安德鲁斯越过联邦政府、擅自和中共签约。澳洲政民自发动员，正告亲共官员和中共：不许出卖维州的利益。与狼共舞的结局如何，邓森便是前车之鉴。而中共已成众矢之的，再难掩盖其邪恶居心。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 5:32 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/18/n11731117.md#1" target="_blank">张林：毛泽东靠什么为所欲为？</a><br></h3>毛泽东本来是苏联独裁者史达林扶植的儿皇帝，但是他的管理共产党的手段，与苏联人主要依靠制度，有很大的不同。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 4:13 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/18/n11729906.md#1" target="_blank">云鹤天：中共的心态</a><br></h3>旷日持久贸易战
 
 协议到底签不签
@@ -60,22 +66,5 @@
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/17/n11727270.md#1" target="_blank">夏祷：愿荣光归台湾（下）?</a><br></h3>2014年，台湾、香港先后发生了太阳花运动和占中运动。学生们攻入立法院，坐上了议场主席台，在国父孙中山先生画像下高悬占领立法院的天数。太阳花学运最终促使台湾搁置了两岸服贸协议，延缓了中共企图通过贸易对台湾的深层渗透。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 2:35 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/17/n11727243.md#1" target="_blank">洪微：英超球星也遭中共封杀</a><br></h3>美国NBA被中共封杀的事件，余音还在，欧洲又起波澜，著名足球明星梅苏特·厄齐尔（Mesut ?zil）也遭到中共封杀。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 12:52 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/16/n11725968.md#1" target="_blank">夏小强：美中第一阶段贸易协议得失谈</a><br></h3>此次美中达成的第一阶段贸易协议，总体上是中共妥协退让的成分占多，从结果来讲，美方的得大于失。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 8:05 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/16/n11725845.md#1" target="_blank">吕锡民：服务业与城市化——全球宏观经济转型</a><br></h3>就像人类成长一样，跟随着年龄的增加，生活结构也会产生变化，国家经济亦是如此，不是一昧追求GDP成长并随之起舞。换句话说，如同人类四肢长大，身上衣服穿着应会产生变化，类似台湾的开发中国家，如果整体经济想要进入欧美先进国家的高收入境界，势必以既合乎历史潮流，又合乎人类文明规律前进，不断实施宏观经济结构调整，从农业进展到工业.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 6:52 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/16/n11725813.md#1" target="_blank">郑纯清：厦门地铁塌陷吟</a><br></h3>红朝验收半月间，
-厦门地铁涌黄泉。
-万岁红铁江山碎，
-豆渣馅破烂泥滩。
-华夏山寨大门毁，
-地基清理复兴前。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 6:39 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/16/n11725637.md#1" target="_blank">袁斌：段子里的中国乱象入木三分</a><br></h3>一部手机丢失了，一群相好惊呆了：不是心疼，是心慌。一个贪官进去了，一帮朋友傻眼了：不是为他，是为己。一个领导艾滋了，一堆妇女乱套了：不是咋治，是咋办？一个情人翻脸了，一批干部想自杀：不是想死，是怕抓！一个老人摔倒了，一个国家纠结了：不是不扶，是不敢。一个校长被捕了，一批校长显形了：不是无能，是无德。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 5:10 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/16/n11725621.md#1" target="_blank">云鹤天：世人明真相</a><br></h3>法轮功女学员
-向世人讲真相
-一名过路男子
-掏出手机照像
-学员穿羽绒服
-帽子罩在头上
-男子肆无忌惮
-靠近学员脸庞
-学员严辞喝止......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 4:57 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/news392_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/news392_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/news392_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/news392_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/news392_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/osnkrv285/djy/blob/master/gb/news392_4.md#1<br><a href="https://github.com/osnkrv285/djy/blob/master/gb/news392_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/osnkrv285/djy/blob/master/gb/news392_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news392_4.htm">http://www.epochtimes.com/gb/news392_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
